--- a/css/demo.css
+++ b/css/demo.css
@@ -130,10 +130,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .slick-dots li {
   cursor: pointer;
   float: left;
-  width: 33.3%;
+  width: 16.5%;
   background: #000;
   padding: 0;
-  border-right: 1px solid #fff;
+  border-right: 0.5px solid #fff;
 }
 .slick-dots li:last-child {
   border: none;
@@ -142,7 +142,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   outline: none;
 }
 .slick-dots li button {
-  background: #99B386;
+  background: #fc3b5d;
   border: none;
   width: 0px;
   height: 10px;
@@ -155,4 +155,34 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+/* Styles */
+.slick-slide .img--holder {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) {
+/* Styles */
+.slick-slide .img--holder {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+/* Styles */
+.slick-slide .img--holder {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
 }
