--- a/css/demo.css
+++ b/css/demo.css
@@ -154,7 +154,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .slick-slide .img--holder {
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: cover;
+  background-size: contain;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
